--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -2,170 +2,188 @@
 % TODO: consistent order of first and last names
 % TODO: remove capitalised surnames
 
-\bibitem{plb43} U. Amaldi et al., Phys. Lett. B 43 (1973) 231-236.
+\bibitem{plb43}
+	\Name{U.~Amaldi et al.}
+	\Review{Phys.~Lett.~B}{43}{1973}{231-236}.
 
-\bibitem{plb66} U. Amaldi et al., Phys. Lett. B 66 (1977) 390-394.
+\bibitem{plb66}
+	\Name{U.~Amaldi et al.}
+	\Review{Phys.~Lett.~B}{66}{1977}{390-394}.
 
-\bibitem{npb141} L. Baksay et al., Nucl. Phys. B 141 (1978) 1-28.
+\bibitem{npb141}
+	\Name{L.~Baksay et al.}
+	\Review{Nucl.~Phys.~B}{141}{1978}{1-28}.
 
-\bibitem{prl47} D. Favart et al., Phys. Rev. Lett. 47 (1981) 1191-1194.
+\bibitem{prl47}
+	\Name{D.~Favart et al.}
+	\Review{Phys.~Rev.~Lett.}{47}{1981}{1191-1194}.
 
-\bibitem{plb115} M. Ambrosio et al., Phys. Lett. B 115 (1982) 495-502.
+\bibitem{plb115}
+	\Name{M.~Ambrosio et al.}
+	\Review{Phys.~Lett.~B}{115}{1982}{495-502}.
 
-\bibitem{plb120} N. Amos et al., Phys. Lett. B 120 (1983) 460-464.
+\bibitem{plb120}
+	\Name{N.~Amos et al.}
+	\Review{Phys.~Lett.~B}{120}{1983}{460-464}.
 
-\bibitem{plb128} N. Amos et al., Phys. Lett. B 128 (1983) 343-348.
+\bibitem{plb128}
+	\Name{N.~Amos et al.}
+	\Review{Phys.~Lett.~B}{128}{1983}{343-348}.
 
-\bibitem{npb262} N. Amos et al., Nucl. Phys. B 262 (1985) 689-714.
+\bibitem{npb262}
+	\Name{N.~Amos et al.}
+	\Review{Nucl.~Phys.~B}{262}{1985}{689-714}.
 
-\bibitem{plb198} D. Bernard et al., Phys. Lett. B 198 (1987) 583-589.
+\bibitem{plb198}
+	\Name{D.~Bernard et al.}
+	\Review{Phys.~Lett.~B}{198}{1987}{583-589}.
 
-\bibitem{plb316} C. Augier et al., Phys. Lett. B 316 (1993) 448-454.
+\bibitem{plb316}
+	\Name{C.~Augier et al.}
+	\Review{Phys.~Lett.~B}{316}{1993}{448-454}.
 
-\bibitem{prl68} N.A. Amos et al., Phys. Rev. Lett. 68 (1992) 2433–2436.
-
+\bibitem{prl68}
+	\Name{N.~A.~Amos et al.}
+	\Review{Phys.~Rev.~Lett.}{68}{1992}{2433–2436}.
 
 \bibitem{wy68}
-	\Name{West, G. B. and Yennie, D. R.}
+	\Name{G.~B.~West and D.~R.~Yennie}
+	\Review{Phys. Rev.}{172}{1968}{1413--1422}
 	%title     = "Coulomb interference in high-energy scattering",
-	\REVIEW{Phys. Rev.}{172}{1968}{1413--1422}
 	%doi       = "10.1103/PhysRev.172.1413",
 
-\bibitem{dremin-dispersion} I.M. Dremin, JETP Lett. 97 (2013) 571-573, arXiv:1304.5345; and references therein.
+\bibitem{dremin-dispersion}
+	\Name{I.~M.~Dremin}
+	\Review{JETP Lett.}{97}{2013}{571--573},
+	arXiv:1304.5345; and references therein.
 
 \bibitem{8tev-90m}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	The $8\un{TeV}$, $\beta^* = 90\un{m}$ paper
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
+	\Review{Nucl.~Phys.~B}{899}{2015}{527-546}.
+	%Evidence for Non-Exponential Elastic Proton-Proton Differential Cross-Section at Low |t| and sqrt(s) = 8 TeV by TOTEM:
 
 \bibitem{kl94}
-	\Name{Kundr\' at, V. and Lokaj\' i\v cek, M.}
+	\Name{V.~Kundr\' at and M.~Lokaj\' i\v cek}
+	\Review{Z.~Phys.}{C63}{1994}{619--630}.
 	%title     = "High-energy scattering amplitude of unpolarized and charged hadrons",
-	\REVIEW{Z.~Phys.}{C63}{1994}{619--630}
 	%doi       = "10.1007/BF01557628",
 
-
 \bibitem{totem-jinst}
+	\Name{G.~Anelli \etal{}~(TOTEM Collaboration)}
+	\Review{JINST}{3}{2008}{S08007}.
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{JINST}{3}{2008}{S08007}
 
 \bibitem{totem-ijmp}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
-
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}.
 
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Europhys.~Lett.}{96}{2011}{21002}.
 
 \bibitem{epl101-el}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
-
-%\bibitem{epl101-inel}
-%	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-%	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Europhys.~Lett.}{101}{2013}{21002}.
 
 \bibitem{epl101-tot}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Europhys.~Lett.}{101}{2013}{21004}.
 
 \bibitem{prl111}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
-
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Phys.~Rev.~Lett.}{111}{2013}{012001}.
 
 \bibitem{totem-optics}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	arXiv:1406.0546
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{New J.~Phys.}{16}{2014}{103041}.
+	%LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
+	%arXiv:1406.0546
 
 \bibitem{lafferty94}
+	\Name{G.~D.~Lafferty and T.~R.~Wyatt}
+	\Review{Nucl.~Instrum.~Meth.}{A 355}{1995}{541}.
  	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
-
 
 \bibitem{block06}
-	\Name{BLOCK, M. M.}
+	\Name{M.~M.~Block}
+	\Review{Phys.~Rept.}{436}{2006}{71--215}.
 	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
-	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
 	%doi       = "10.1016/j.physrep.2006.06.003",
 
 \bibitem{puckett10}
-	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
+	\Name{A.~J.~R.~Puckett \etal{}~(GEp-III Collaboration)}
 	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
-	arXiv:nucl-ex/1008.0855 (2010)
+	arXiv:nucl-ex/1008.0855 (2010).
 
 \bibitem{jan_thesis}
-	\Name{Ka\v spar J.}
-	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
+	\Name{J.~Ka\v spar}
+	PhD Thesis, CERN-THESIS-2011-214,
+	\url{http://cdsweb.cern.ch/record/1441140}.
 
 \bibitem{bailly87}
+	\Name{J.~L.~Bailly \etal{}~(EHS-RCBC Collaboration)}
+	\Review{Z.~Phys.~C}{37}{1987}{7--16}.
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
-	\Name{Bailly, J.L.~\etal{}(EHS-RCBC Collaboration)}
-	\REVIEW{Z.~Phys.~C}{37}{1987}{7--16}
 	%url={http://dx.doi.org/10.1007/BF01442063}
 
 \bibitem{klk02}
+	\Name{V.~Kundr\' at, M.~Lokaj\' i\v cek and D.~Krupa}
+	\Review{Phys.~Lett.~B}{544}{2002}{132--138}.
 	%title = "Impact parameter structure derived from elastic collisions ",
-	\Name{Kundr\' at, V., Lokaj\' i\v cek, M., Krupa, D.}
-	\REVIEW{Phys.~Lett.~B}{544}{2002}{132--138}
 	%number = "1–2",
 	%doi = "http://dx.doi.org/10.1016/S0370-2693(02)02481-4",
 
 \bibitem{kl96}
+	\Name{V.~Kundr\' at and M.~Lokaj\' i\v cek}
+	\Review{Mod.~Phys.~Lett.~A}{11}{1996}{2241--2250}.
 	%title = {DESCRIPTION OF HIGH-ENERGY ELASTIC HADRON SCATTERING IN BOTH THE COULOMB AND HADRONIC DOMAINS},
-	\Name{Kundr\' at, V., Lokaj\' i\v cek, M.}
-	\REVIEW{Mod.~Phys.~Lett.~A}{11}{1996}{2241--2250}
 	%number = {28},
 	%doi = {10.1142/S021773239600223X},
 
 \bibitem{kl05}
+	\Name{V.~Kundr\' at and M. Lokaj\' i\v cek}
+	\Review{Phys.~Lett.}{B611}{2005}{102--110}.
     %Interference between Coulomb and hadronic scattering in elastic high-energy nucleon collisions
-	\Name{Kundr\' at, V., Lokaj\' i\v cek, M.}
-	\REVIEW{Phys.~Lett.}{B611}{2005}{102--110}
     %doi            = "10.1016/j.physletb.2005.02.025",
 
 \bibitem{elegent}
+	\Name{J.~Ka\v spar}
+	\Review{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
 	%title = "Elegent—An elastic event generator ",
-	\Name{Ka\v spar, J.}
-	\REVIEW{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
 	%number = "3",
 	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
-	and \url{http://elegent.hepforge.org/}
+	and \url{http://elegent.hepforge.org/}.
 
 \bibitem{hubert-thesis}
 	\Name{H.~Niewiadomski}
-	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
-    PhD thesis, 
+    PhD thesis, CERN-THESIS-2008-080,
+	\url{http://cds.cern.ch/record/1131825}.
 	%University of Manchester, 2008
-    CERN-THESIS-2008-080,
-	\url{http://cds.cern.ch/record/1131825}
+	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
 
-\bibitem{op-elog} CERN LHC OP eLogbook:
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049006},
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049013}, 
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049020}
+\bibitem{op-elog} CERN LHC OP eLogbook:\\
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049006},\\
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049013},\\ 
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049020}.
 
 \bibitem{compete} 
-	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
-	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
+	\Name{J.~R.~Cudell \etal{}~(COMPETE Collaboration)}
+	\Review{Phys.\ Rev.\ Lett.}{89}{2002}{201801}.
 
 \bibitem{pdg} 
-	\Name{Nakamura K.~\etal{} (Particle Data Group)}
-	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
+	\Review{J.~Phys.}{G37}{2010}{075021}.
 
 \bibitem{epl95}
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Europhys.~Lett.}{95}{2011}{41001}.
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
 
 \bibitem{borkowski}
-	\Name{Borkowski F.~et al.}
+	\Name{F.~Borkowski \etal}
+	\Review{Nuclear Physics A}{222}{1974}{269 -- 275}.
 	%title = "Electromagnetic form factors of the proton at low four-momentum transfer",
-	\REVIEW{Nuclear Physics A}{222}{1974}{269 -- 275}
 	%doi = "DOI: 10.1016/0375-9474(74)90392-3",
 
 \bibitem{kl-8tev}	
@@ -173,52 +191,27 @@
 	note on peripheral phase at 8TeV
 
 \bibitem{kmr15-slope}
-	\Name{A.~D.~Martin, V.~A.~Khoze, M.~G.~Ryskin}
-	\REVIEW{J.~Phys.}{G42}{2015}{2, 025003}
+	\Name{A.~D.~Martin, V.~A.~Khoze and M.~G.~Ryskin}
+	\Review{J.~Phys.}{G42}{2015}{2, 025003}.
 	%doi = http://dx.doi.org/10.1088/0954-3899/42/2/025003
 
 \bibitem{fagundes11}
 	\Name{D. A. Fagundes, E. G. S. Luna, M. J. Menon, A. A. Natale}
-	LISHEP 2011, Worshop on LHC -- Present and Future, Rio de Janeiro, RJ, July 05-10, 2011, Brazil
+	LISHEP 2011, Worshop on LHC -- Present and Future, Rio de Janeiro, RJ, July 05-10, 2011, Brazil.
 
 \bibitem{block12}
+	\Name{M.~M.~Block and F.~Halzen}
+	\Review{Phys.~Rev.~D}{86}{2012}{014006}.
 	% Forward hadronic scattering at 8 TeV: Predictions for the LHC
-	\Name{Martin M. Block and Francis Halzen}
-	\REVIEW{Phys.~Rev.~D}{86}{2012}{014006}
 
 \bibitem{kmr12-opacity}
+	\Name{M.~G.~Ryskin, A.~D.~Martin and V.~A.~Khoze}
+	\Review{Eur.~Phys.~J.~C}{72}{2012}{1937}.
 	%Proton opacity in the light of LHC diffractive data
-	\Name{Ryskin, M.~G., Martin, A.~D.~and Khoze, V.~A.}
-	\REVIEW{Eur.~Phys.~J.~C}{72}{2012}{1937}
 	%doi={10.1140/epjc/s10052-012-1937-x},
 
-
-% TODO: remove unnecessary references
-
-\iffalse
-
-\bibitem{mario_ipac_2011}
-	\Name{Deile M.}
-	{\it The First 1 1/2 Years of TOTEM Roman Pot Operation at LHC}, in
-	{\it Proceedings of the 2nd International Particle Accelerator Conference (IPAC 2011), San Sebastian, Spain}. 
-	%{\tt http://accelconf.web.cern.ch/AccelConf/IPAC2011/papers/mopo011.pdf}
-	arXiv:1110.5808v1
-
-\bibitem{kklp}	
-	\Name{Ka\v spar, J.~\etal}
-	\REVIEW{Nucl.~Phys.}{B843}{2011}{84}
-
-\bibitem{B_vs_s}
-	\Name{ISR (CR Collaboration)} \REVIEW{Phys.~Lett.}{B62}{1976}{460}; 
-	\Name{ISR (ACHGT Collaboration)} \REVIEW{Phys.~Lett.}{B39}{1972}{663}; 
-	\Name{ISR (R-211)} \REVIEW{Nucl.~Phys.}{B262}{1985}{689}; 
-	\Name{ISR (R-210)} \REVIEW{Phys.~Lett.}{B115}{1982}{495}; 
-	\Name{UA1} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
-	\Name{UA4} \REVIEW{Phys.~Lett.}{B127}{1983}{472} and \REVIEW{Phys. Lett.}{B198}{1987}{583}; 
-	\Name{UA4/2} \REVIEW{Phys.~Lett.}{B316}{1993}{448}; 
-	\Name{CDF} \REVIEW{Phys.~Rev.}{D50}{1994}{5518}; 
-	\Name{E710} \REVIEW{Phys.~Rev.~Lett.}{68}{1992}{2433} and \REVIEW{Nuovo Cimento}{A106}{1992}{123}; 
-	\Name{D0} D0 Note 6056-CONF; 
-	\Name{pp2pp} \REVIEW{Phys.~Lett.}{B579}{2004}{245}
-
-\fi
+\bibitem{kmr00-multiPom}
+	\Name{V.~A.~Khoze, A.~D.~Martin and M.~G.~Ryskin}
+	\Review{Eur.~Phys.~J.~C}{18}{2000}{167-179}.
+	%Soft diffraction and the elastic slope at Tevatron and LHC energies: a multi-Pomeron approach
+	%doi={10.1007/s100520000494}
