--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -38,8 +38,8 @@
 \def\S{\hbox to\wd123{\hss}}
 \def\.{\hbox to\wd124{\hss}}
 
-\def\Name#1{\textsc{#1}, }
-\def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
+\def\Name#1{#1, }
+\def\Review#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
 
 %-----------------------------------------------------------------------------
 
