--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -1,6 +1,4 @@
 % TODO: sort the references
-% TODO: consistent order of first and last names
-% TODO: remove capitalised surnames
 
 \bibitem{plb43}
 	\Name{U.~Amaldi et al.}
@@ -100,6 +98,18 @@
 	%LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
 	%arXiv:1406.0546
 
+\bibitem{op-elog} CERN LHC OP eLogbook:\\
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049006},\\
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049013},\\ 
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049020}.
+
+\bibitem{hubert-thesis}
+	\Name{H.~Niewiadomski}
+    PhD thesis, CERN-THESIS-2008-080,
+	\url{http://cds.cern.ch/record/1131825}.
+	%University of Manchester, 2008
+	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
+
 \bibitem{lafferty94}
 	\Name{G.~D.~Lafferty and T.~R.~Wyatt}
 	\Review{Nucl.~Instrum.~Meth.}{A 355}{1995}{541}.
@@ -111,21 +121,33 @@
 	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
 	%doi       = "10.1016/j.physrep.2006.06.003",
 
-\bibitem{puckett10}
-	\Name{A.~J.~R.~Puckett \etal{}~(GEp-III Collaboration)}
-	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
-	arXiv:nucl-ex/1008.0855 (2010).
-
 \bibitem{jan_thesis}
 	\Name{J.~Ka\v spar}
 	PhD Thesis, CERN-THESIS-2011-214,
 	\url{http://cdsweb.cern.ch/record/1441140}.
+
+\bibitem{elegent}
+	\Name{J.~Ka\v spar}
+	\Review{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
+	%title = "Elegent—An elastic event generator ",
+	%number = "3",
+	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
+	and \url{http://elegent.hepforge.org/}.
+
+\bibitem{epl95}
+	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
+	\Review{Europhys.~Lett.}{95}{2011}{41001}.
+    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
 
 \bibitem{bailly87}
 	\Name{J.~L.~Bailly \etal{}~(EHS-RCBC Collaboration)}
 	\Review{Z.~Phys.~C}{37}{1987}{7--16}.
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
 	%url={http://dx.doi.org/10.1007/BF01442063}
+
+\bibitem{kl-8tev}	
+	\Name{Vojt\v ech et al.}
+	\TODO{Note with peripheral-phase parameters at 8TeV}.
 
 \bibitem{klk02}
 	\Name{V.~Kundr\' at, M.~Lokaj\' i\v cek and D.~Krupa}
@@ -147,48 +169,22 @@
     %Interference between Coulomb and hadronic scattering in elastic high-energy nucleon collisions
     %doi            = "10.1016/j.physletb.2005.02.025",
 
-\bibitem{elegent}
-	\Name{J.~Ka\v spar}
-	\Review{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
-	%title = "Elegent—An elastic event generator ",
-	%number = "3",
-	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
-	and \url{http://elegent.hepforge.org/}.
+\bibitem{puckett10}
+	\Name{A.~J.~R.~Puckett \etal{}~(GEp-III Collaboration)}
+	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
+	arXiv:nucl-ex/1008.0855 (2010).
 
-\bibitem{hubert-thesis}
-	\Name{H.~Niewiadomski}
-    PhD thesis, CERN-THESIS-2008-080,
-	\url{http://cds.cern.ch/record/1131825}.
-	%University of Manchester, 2008
-	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
+\bibitem{kmr00-multiPom}
+	\Name{V.~A.~Khoze, A.~D.~Martin and M.~G.~Ryskin}
+	\Review{Eur.~Phys.~J.~C}{18}{2000}{167-179}.
+	%Soft diffraction and the elastic slope at Tevatron and LHC energies: a multi-Pomeron approach
+	%doi={10.1007/s100520000494}
 
-\bibitem{op-elog} CERN LHC OP eLogbook:\\
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049006},\\
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049013},\\ 
-	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049020}.
-
-\bibitem{compete} 
-	\Name{J.~R.~Cudell \etal{}~(COMPETE Collaboration)}
-	\Review{Phys.\ Rev.\ Lett.}{89}{2002}{201801}.
-
-\bibitem{pdg} 
-	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
-	\Review{J.~Phys.}{G37}{2010}{075021}.
-
-\bibitem{epl95}
-	\Name{G.~Antchev \etal{}~(TOTEM Collaboration)}
-	\Review{Europhys.~Lett.}{95}{2011}{41001}.
-    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001, CERN-PH-EP-2011-101 
-
-\bibitem{borkowski}
-	\Name{F.~Borkowski \etal}
-	\Review{Nuclear Physics A}{222}{1974}{269 -- 275}.
-	%title = "Electromagnetic form factors of the proton at low four-momentum transfer",
-	%doi = "DOI: 10.1016/0375-9474(74)90392-3",
-
-\bibitem{kl-8tev}	
-	\Name{Vojtech et al.}
-	note on peripheral phase at 8TeV
+\bibitem{kmr12-opacity}
+	\Name{M.~G.~Ryskin, A.~D.~Martin and V.~A.~Khoze}
+	\Review{Eur.~Phys.~J.~C}{72}{2012}{1937}.
+	%Proton opacity in the light of LHC diffractive data
+	%doi={10.1140/epjc/s10052-012-1937-x},
 
 \bibitem{kmr15-slope}
 	\Name{A.~D.~Martin, V.~A.~Khoze and M.~G.~Ryskin}
@@ -204,14 +200,10 @@
 	\Review{Phys.~Rev.~D}{86}{2012}{014006}.
 	% Forward hadronic scattering at 8 TeV: Predictions for the LHC
 
-\bibitem{kmr12-opacity}
-	\Name{M.~G.~Ryskin, A.~D.~Martin and V.~A.~Khoze}
-	\Review{Eur.~Phys.~J.~C}{72}{2012}{1937}.
-	%Proton opacity in the light of LHC diffractive data
-	%doi={10.1140/epjc/s10052-012-1937-x},
+\bibitem{compete} 
+	\Name{J.~R.~Cudell \etal{}~(COMPETE Collaboration)}
+	\Review{Phys.\ Rev.\ Lett.}{89}{2002}{201801}.
 
-\bibitem{kmr00-multiPom}
-	\Name{V.~A.~Khoze, A.~D.~Martin and M.~G.~Ryskin}
-	\Review{Eur.~Phys.~J.~C}{18}{2000}{167-179}.
-	%Soft diffraction and the elastic slope at Tevatron and LHC energies: a multi-Pomeron approach
-	%doi={10.1007/s100520000494}
+\bibitem{pdg} 
+	\Name{K.~Nakamura \etal{}~(Particle Data Group)}
+	\Review{J.~Phys.}{G37}{2010}{075021}.
