added rho as keyword
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11393 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -115,7 +115,7 @@ Coulomb-Nuclear Interference Region by TOTEM}
 
 % TODO
 \begin{keyword}
-proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interference \sep total cross-section \sep TOTEM \sep LHC
+proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interference \sep total cross-section \sep rho parameter \sep TOTEM \sep LHC
 \PACS 13.60.Hb % Total and inclusive cross sections (including deep-inelastic processes)
 \end{keyword}
 \end{frontmatter}
