remaining tasks marked with TODOs
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11400 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -14,6 +14,9 @@ conjunction with different mathematical descriptions of the modulus and phase
 of the hadronic amplitude as a function of $t$. The hadronic modulus was parameterised as an exponential function with a polynomial slope of degree 0 to 2 ($N_b=1$ to 3 parameters).
 For the phase two options were considered, leading to different impact 
 parameter distributions of elastic scattering events: a constant phase implying a preferentially central behaviour, and a description favouring peripheral collisions.
+
+\TODO{Finalise}
+
 The following conclusions can be drawn:
 \begin{itemize}
 \item A constant phase : excluded ...
