--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -5,11 +5,8 @@ The results reported here are based on data taken in October 2012
 in a dedicated LHC proton fill (3216)
 with the very special beam properties described in the previous section.
 
-The vertical RP approach to only $3\,\sigma_{y}$ from the beam centre required
-low beam currents -- two colliding bunch pairs and in each beam one 
-non-colliding bunch for background monitoring, with $10^{11}$ protons per bunch 
--- and a novel collimation strategy 
-to keep the beam halo background under control. As a first step, the primary 
+The vertical RP approach to only $3\,\sigma_{y}$ from the beam centre required low beam currents: two colliding bunch pairs and in each beam one 
+non-colliding bunch for background monitoring, with $10^{11}$ protons per bunch. In addition, a novel collimation strategy was needed to keep the beam halo background under control. As a first step, the primary 
 collimators (TCP) in LHC point 7 scraped the beam down to $2\,\sigma_{y}$; then 
 they were retracted to $2.5\,\sigma_{y}$, thus creating a $0.5\,\sigma_{y}$ gap 
 between
