--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -12,11 +12,11 @@ While a complete description of the TOTEM detector instrumentation
 and its performance is given in~\cite{totem-jinst} and~\cite{totem-ijmp}, 
 the present article focusses on the data from the RPs, movable beam-pipe
 insertions that approach the LHC beam very closely to detect protons with
-scattering angles of only a few $\mu$rad. 
+scattering angles of only a few microradians. 
 The RPs are organised in two stations: one on the left side of the IP 
 (LHC sector 45) and one on the right (LHC sector 56).
-Each RP station, located between 214 and 220\,m from the IP, is composed of two 
-units: ``near'' (214\,m from the IP) and ``far'' (220\,m). 
+Each RP station, located between 215 and 220\,m from the IP, is composed of two 
+units: ``near'' (215\,m from the IP) and ``far'' (220\,m). 
 A unit consists of 3 RPs, two
 approaching the outgoing beam vertically and one horizontally.
 Each RP is equipped with a stack of 10 silicon
