small tasks done
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11401 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -185,11 +185,11 @@ where $\Delta$ is a vector of differences between the differential cross-section
 \iffalse
 \begin{equation}
 \label{eq:chi sq B}
-	\chi^2 = \Delta^\T \mat V^{-1} \Delta + \TODO{...}\ ,\qquad
+	\chi^2 = \Delta^\T \mat V^{-1} \Delta + ...\ ,\qquad
 	\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {1\over \Delta t_i} \int_{{\rm bin}\ i} f(t)\,\d t\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-$\Delta t_i$ representing the width of the $i$-th bin. \TODO{custom implementation of interference formulae.}
+$\Delta t_i$ representing the width of the $i$-th bin. Custom implementation of interference formulae?
 \fi
 
 \end{enumerate}
