--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,55 +1,21 @@
 \section{Summary and Outlook}
 \label{sec:summary}
-For the first time at LHC the differential cross-section of elastic proton-proton scattering has been measured at $|t|$-values down to the Coulomb-nuclear interference (CNI) region. This was made possible by a special beam optics, a novel collimation procedure and by moving the RPs to an unprecedented distance of only 
-$3\,\sigma$ from the beam centre.
+For the first time at LHC the differential cross-section of elastic proton-proton scattering has been measured at $|t|$-values down to the Coulomb-nuclear interference (CNI) region. This was made possible by a special beam optics, a novel collimation procedure and by moving the RPs to an unprecedented distance of only $3\,\sigma$ from the beam centre.
 
-%\> differential cross-section measurement summary
-%\>> first time at LHC: $|t|$ down to the Coulomb-interference region
-%\>>> RPs extremely close to beam (unprecedented)
-%\>>> novel collimation procedure
-To fit $\d\sigma/\d t$ in the CNI region, two interference formulae --
-Simplified West and Yennie (SWY), and Kundr\' at-Lokaj\' i\v cek (KL) -- 
-were explored in 
-conjunction with different mathematical descriptions of the modulus and phase 
-of the hadronic amplitude as a function of $t$. The hadronic modulus was parameterised as an exponential function with a polynomial slope of degree 0 to 2 ($N_b=1$ to 3 parameters).
-For the phase two options were considered, leading to different impact 
-parameter distributions of elastic scattering events: a constant phase implying a preferentially central behaviour, and a description favouring peripheral collisions.
-
-\TODO{Finalise}
-
-The following conclusions can be drawn:
+To fit $\d\sigma/\d t$ in the CNI region, two interference formulae -- Simplified West and Yennie (SWY) and Kundr\' at-Lokaj\' i\v cek (KL) -- 
+were explored in conjunction with different mathematical descriptions of the modulus and phase of the nuclear amplitude as a function of $t$. The nuclear modulus was parametrised as an exponential function with a polynomial slope of degree 0 or 2 ($N_b=1$ or $3$ parameters). These two alternatives allowed to test whether the nuclear modulus can be purely exponential or more flexibility is required. For the phase two options were considered, leading to different impact-parameter distributions of elastic scattering events: a constant phase implying a central behaviour, and a description favouring peripheral collisions. The following conclusions can be drawn.
 \begin{itemize}
-\item A constant phase : excluded ...
-
-And so on ... bla ... bla 
-
-SWY formula excluded, too
-\item $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
-\item $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
+\item Purely exponential nuclear modulus ($N_b=1$), constant phase: excluded with more than $7\un{\sigma}$ confidence. Since this is the only combination compatible with the SWY formula, its application is excluded, too.
+\item Purely exponential nuclear modulus ($N_b=1$), peripheral phase: the data do not exclude this option which, however, may be disfavoured from other perspectives.
+\item Non-exponential nuclear modulus ($N_b=3$): both constant and peripheral phases are well compatible with data, therefore the central impact-parameter picture is not a necessity.
 \end{itemize}
 
-\> $\rho$
-\>> at LHC: for the first time extracted via Coulomb-interference
-\>> results from Section~\ref{sec:fit exp3} can be summarised
+The $\rho$ parameter was for the first time at LHC extracted via the Coulomb-nuclear interference. The preferred fits ($N_b=3$) can be summarised by
 \begin{equation}
 \label{eq:rho final}
-\rho = 0.12 \pm 0.03
+\rho = 0.12 \pm 0.03\ .
 \end{equation}
 
-\> $\sigma_{\rm tot}$ -- first LHC results where:
-\>> rho determined in the same analysis (not from an external source)
-\>> explicit separation of Coulomb and nuclear components -- conceptually more accurate than all previous works
-\>> summary on presented $\sigma_{\rm tot}$ values?
-\>>> extremely stable
-\>>> little greater than if Coulomb neglected (expected as long as $\rho > 0$)
+The new total cross-section determination is conceptually more accurate than in all previous LHC publications since the CNI effects are explicitly treated. Moreover, the value of $\rho$ comes from the same analysis, not an external source, which underlines consistency. The $\sigma_{\rm tot}$ values are very well consistent among all non-excluded fits and compatible with the previous measurements. As expected, the new determination yields slightly greater values relative to previous results where the negative CNI was not taken into account.
 
-\> prospects for future
-\>> how could things be done better: requirements from theory/experiment
-\>>> need better distinction between the hadronic and CNI components
-\>>> either from theory: narrow the range of possible parametrisations
-\>>> either from experiment: extremely precise data (more statistics, lower $|t|$, ...)
-\>> TOTEM plans, measurements foreseen
-\>>> extremely high beta* (2500 m), what $|t|$ reach (also as a function of $s$)
-\>>> wish: more statistics -- better discrimination power (N vs.~CNI component)
-\>>> wish: lower $|t|$ reach -- helps in several issues in one go. If ``pure'' Coulomb measured, normalisation constrained -- uncertainty of si tot reduced. The rising edge of acceptance shifted, thus higher statistics in the CNI region. Similarly, the (leading) impact of the vertical-alignment uncertainty suppressed.
-\>> other possible experiments: n+n, n+p scattering -- Coulomb reduced, better hint on the nuclear component
+For even stronger results in future the key point is a better distinction between the nuclear and CNI cross-section components, which can be achieved from both theoretical and experimental sides. New theory developments may narrow down the range of allowed parametrisations of the nuclear modulus and phase or better constrain the induced CNI effects. The experimental improvements include increasing statistics and reducing the lower $|t|$ threshold. For the former, TOTEM has already upgraded the RP mechanics such that both vertical pots can be simultaneously placed very close to the beam. For the latter, TOTEM foresees an optics with extremely high $\beta^* \approx 2500\un{m}$ which would allow to reach the CNI region even at Run II energies. Moreover, recent experience with $\beta^* = 90\un{m}$ optics at $\sqrt s = 13\un{TeV}$ shows that very low beam emittances can be achieved, thus possibly reducing the RP distance from the beam.
